--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -1,14 +1,13 @@
-
-.droplet{
-  z-index: 1;
-  max-width: 3vw;
-  min-width: 3vw;
-  position: absolute;
-  top: 6vw;
-  right: 8vw;
+.droplet {
+    z-index: 1;
+    max-width: 3vw;
+    min-width: 3vw;
+    position: absolute;
+    top: 6vw;
+    right: 8vw;
 }
 
-#nozzle{
+#nozzle {
     opacity: 1;
     z-index: 2;
     position: relative;
@@ -16,69 +15,94 @@
     max-width: 30vw;
     top: 4vw;
 }
-#fluid{
-  opacity: 1;
-  z-index: 3;
-  min-width: 30vw;
-  max-width: 30vw;
-  position: relative;
+
+#fluid {
+    opacity: 1;
+    z-index: 3;
+    min-width: 30vw;
+    max-width: 30vw;
+    position: relative;
 }
 
-
 @keyframes drawArc {
-    0% { transform: rotate(0deg) translateX(10vw) translateY(+13vw) rotate(75deg);
-    opacity: 0;}
-    90% { transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg) ;}
-    100%{ transform: rotate(0deg) translateX(0px) rotate(0deg);  }
+    0% {
+        transform: rotate(0deg) translateX(10vw) translateY(+13vw) rotate(75deg);
+        opacity: 0;
+    }
+    90% {
+        transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg);
+    }
+    100% {
+        transform: rotate(0deg) translateX(0px) rotate(0deg);
+    }
 }
 
 @keyframes drawArc2 {
-  0% { transform: rotate(0deg) translateX(14vw) translateY(+13vw) rotate(75deg);
-  opacity: 0;}
-  90% { transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg) ;}
-  100%{ transform: rotate(0deg) translateX(0px) rotate(0deg);  }
+    0% {
+        transform: rotate(0deg) translateX(14vw) translateY(+13vw) rotate(75deg);
+        opacity: 0;
+    }
+    90% {
+        transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg);
+    }
+    100% {
+        transform: rotate(0deg) translateX(0px) rotate(0deg);
+    }
 }
 
 @keyframes drawArc3 {
-  0% { transform: rotate(0deg) translateX(12vw) translateY(+8vw) rotate(75deg);
-  opacity: 0;}
-  90% { transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg) ;}
-  100%{ transform: rotate(0deg) translateX(0px) rotate(0deg);  }
+    0% {
+        transform: rotate(0deg) translateX(12vw) translateY(+8vw) rotate(75deg);
+        opacity: 0;
+    }
+    90% {
+        transform: rotate(0deg) translateX(7vw) translateY(+2vw) rotate(12deg);
+    }
+    100% {
+        transform: rotate(0deg) translateX(0px) rotate(0deg);
+    }
 }
 
 @keyframes dissolve {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
-#droplet.animation{
+#droplet.animation {
     display: inline-block;
     margin: 0 0.5rem;
-    animation: bounce; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 2s; /* don't forget to set a duration! */
+    animation: bounce;
+    /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s;
+    /* don't forget to set a duration! */
 }
 
-
 @keyframes MoveUpDown {
-    0%, 100% {
-      transform: translateY(0);
+    0%,
+    100% {
+        transform: translateY(0);
     }
     50% {
-      transform: translateY(4vw);
-    }  }
-
+        transform: translateY(4vw);
+    }
+}
 
 .container {
-  height: 100vh;
-  position: relative;
-  border: 3px solid green;
+    height: 100vh;
+    position: relative;
+    border: 3px solid rgb(126, 228, 254);
+    border-radius: 15px 50px;
 }
 
 .center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
