--- a/CSS/styling.css
+++ b/CSS/styling.css
@@ -92,7 +92,7 @@
 }
 
 .container {
-    height: 100vh;
+    height: 95vh;
     position: relative;
     border: 3px solid rgb(126, 228, 254);
     border-radius: 15px 50px;
@@ -105,4 +105,12 @@
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+
+#footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    height: 5vh;
+    width: 100%;
 }
